# code-documentation-system

./: .gitignore  CLAUDE.md  README.md  package.json  tsconfig.tsbuildinfo
.cursor/: mcp.json
.docify/: config.yaml
app/: page.tsx
docify/: README.md  hatch_build.py  pyproject.toml
docify/src/docify/anchors/: gitops.py  symbols.py
docify/src/docify/checker/: check.py
docify/src/docify/cli/: app.py
docify/src/docify/core/: models.py  store.py
docify/src/docify/mcp/: server.py
docify/src/docify/web/: app.py
docs/: docify-design.md
docs/features/: auth-login.md  cli-interface.md  core-store.md  mcp-server.md  specs-and-backlog.md  staleness-checker.md  symbol-anchors.md  ui-dashboard.md  web-backend.md
src/: auth.ts
tests/: test_checker.py  test_store.py  test_symbols.py
