[project]
name = "docify"
version = "0.1.0"
description = "Living feature documentation anchored to code, for humans and coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
docify = "docify.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docify"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
